--- a/src/java/lang/build.xml
+++ b/src/java/lang/build.xml
@@ -1,3 +1,4 @@
+<!DOCTYPE project>
 <project name="lang" default="run">
 
 	<property name="root.dir" value="${basedir}/../../.." />
@@ -18,8 +19,13 @@
 
 	<import file="${ivy.dir}/ivy-install.xml"/>
 
-	<target name="run" depends="compile">
-		<java jar="${build.dir}/lang.jar" fork="true"/>
+	<target name="run" depends="jar">
+		<java jar="${build.dir}/lang.jar" fork="true">
+			
+			<jvmarg value="-Xdebug" />
+			<jvmarg value="-Xrunjdwp:transport=dt_socket,suspend=y,address=8000"/>
+			
+		</java>
 	</target>
 
 </project>
